fixed broken link and refined the blog session

--- a/refract-docs/blog/authors.yml
+++ b/refract-docs/blog/authors.yml
@@ -1,25 +1,23 @@
 yangshun:
-  name: Yangshun Tay
-  title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
+  name: PeaceSandy
+  title: Technical Writer
   url: https://linkedin.com/in/yangshun
-  image_url: https://github.com/yangshun.png
   page: true
   socials:
-    x: yangshunz
-    linkedin: yangshun
+    x: peacesandy
+    linkedin: peacesandy
     github: yangshun
     newsletter: https://www.greatfrontend.com
 
 slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
+  name: PeaceSandy
+  title: Technical Writer
   url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
   page:
     # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
+    permalink: "/all-sebastien-lorber-articles"
   socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
+    x: peacesandy
+    linkedin: peacesandy
     github: slorber
     newsletter: https://thisweekinreact.com
